--- a/static/style.css
+++ b/static/style.css
@@ -83,3 +83,37 @@ span #time-current {
     width: 40px;
     text-align: right;
 }
+
+.timer-icon
+{
+    width: 25px;
+    height: 25px;
+    background-size: cover;
+    background-image: url("/static/timer.png");
+}
+
+.fav
+{
+    width: 25px;
+    height: 25px;
+    background-size: cover;
+    background-image: url("/static/fav_off.png");
+}
+
+.on
+{
+    background-image: url("/static/fav_on.png");
+}
+
+@keyframes rotateFav {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading-fav {
+  animation: rotateFav 2s linear infinite;
+}
