--- a/static/style.css
+++ b/static/style.css
@@ -35,7 +35,8 @@ body {
     z-index: -1;
 }
 
-.modal-img {
+.modal-img-container
+{
     flex-basis: 80%;
     margin: 20px;
     display: block;
@@ -44,6 +45,43 @@ body {
     max-height: calc(100% - 40px); /* 20px margin on top and bottom */
     /*border: calc(100% * min(100vw, 100vh)) solid transparent; !* fallback border width *!*/
 }
+
+.modal-img {
+    /*flex-basis: 80%;*/
+    /*margin: 20px;*/
+    display: block;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    /*max-width: calc(100% - 40px); !* 20px margin on left and right *!*/
+    /*max-height: calc(100% - 40px); !* 20px margin on top and bottom *!*/
+    /*border: calc(100% * min(100vw, 100vh)) solid transparent; !* fallback border width *!*/
+}
+
+.modal-button-prev, .modal-button-next
+{
+    position: relative;
+    bottom: 4%;
+    opacity: 0.1;
+    width: calc(3vh);
+    height: calc(3vh);
+    transition: opacity 0.2s;
+}
+.modal-button-prev:hover, .modal-button-next:hover
+{
+    opacity: 0.7;
+}
+.modal-button-next
+{
+    right: -43%;
+}
+.modal-button-prev
+{
+    left: -43%;
+}
+
+
+
 
 .modal-controls {
     display: flex;
