same-folder set to true by default when image clicked in overview

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -44,7 +44,7 @@
     <div class="directory">
         <img src="/thumb/{{ img.image_id }}.jpg" alt="thumbnail">
         <div>
-            <h4>[{{ img.study_type }}] <b>{{ img.path }}</b> <a href="/study-image/{{ img.image_id }}?time-planned=120">open
+            <h4>[{{ img.study_type }}] <b>{{ img.path }}</b> <a href="/study-image/{{ img.image_id }}?same-folder=true&time-planned=120">open
                 id:{{ img.image_id }}</a></h4>
         </div>
     </div>
