--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Image ({{ image.image_id }})</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/style_image.css">
     <script type="text/javascript" src="/static/img_params.js"></script>
     <script type="text/javascript" src="/static/study_timer.js"></script>
 </head>
