--- a/static/style_image.css
+++ b/static/style_image.css
@@ -58,6 +58,18 @@ body {
     /*border: calc(100% * min(100vw, 100vh)) solid transparent; !* fallback border width *!*/
 }
 
+.magnification {
+    pointer-events: none;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    /*width: 300px; !* Adjust the size of the magnification container as needed *!*/
+    /*height: 300px;*/
+    background-repeat: no-repeat;
+    display: none;
+
+}
+
 .modal-button-prev, .modal-button-next
 {
     position: relative;
