--- a/static/style_image.css
+++ b/static/style_image.css
@@ -58,6 +58,10 @@ body {
     /*border: calc(100% * min(100vw, 100vh)) solid transparent; !* fallback border width *!*/
 }
 
+.modal-img-darken {
+    filter: brightness(50%); /* Adjust the percentage value for desired darkness */
+  }
+
 .magnification {
     pointer-events: none;
     position: absolute;
@@ -67,7 +71,6 @@ body {
     /*height: 300px;*/
     background-repeat: no-repeat;
     display: none;
-
 }
 
 .modal-button-prev, .modal-button-next
