--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -285,7 +285,7 @@
                 y = Math.min(Math.max(y, 0), msize.y) - mhalf.y
                 x /= msize.x; y /= msize.y
 
-                x *= msizeScaled.x; y *= msizeScaled.y
+                x *= -msizeScaled.x; y *= -msizeScaled.y
 
                 x -= (msizeScaled.x - msize.x) * 0.5
                 y -= (msizeScaled.y - msize.y) * 0.5
