--- a/static/styles_overview.css
+++ b/static/styles_overview.css
@@ -20,41 +20,74 @@ body {
     margin-right: 20px;
 }
 
-
-.directory {
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.directory .thumb {
-    width: 200px;
-    max-height: 80px;
-    object-fit: contain;
-}
-
-.directory .dir-link
+.dir-link
 {
     width: 15px;
     height: 15px;
 }
 
-.directory h4 {
-    margin: 0;
-    font-style: normal;
-    font-weight: normal;
+.tiles-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px; /* Adjust the gap between tiles as needed */
 }
 
-.directory p {
-    margin: 0;
-    font-size: 14px;
+.tile {
+  position: relative;
+  width: 200px; /* Adjust the tile width as needed */
 }
 
-.directory a:visited, .directory a {
-    color: #2d2c2c;
+.tile .bg-thumb {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
-.directory a:hover {
-    color: #422b56;
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2); /* Adjust the overlay background color and opacity as needed */
+  color: white;
+  padding: 20px;
+  box-sizing: border-box;
+  opacity: 0.3;
+  transition: opacity 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.tile:hover .overlay {
+  opacity: 1;
+}
+
+.overlay h2, .overlay p, .overlay a {
+  margin: 0;
+}
+
+.overlay h2 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.overlay p {
+  font-size: 20px;
+  margin-bottom: 10px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
+.overlay a {
+  display: inline-block;
+  margin-right: 10px;
+  color: white;
+  text-decoration: none;
+}
+
+.overlay a:hover {
+  text-decoration: underline;
 }
