--- a/static/styles_overview.css
+++ b/static/styles_overview.css
@@ -2,92 +2,99 @@ body {
     background-color: #7a7676;
 }
 
-.header
-{
+.header {
     display: flex;
     flex-direction: row;
     height: 80px;
     align-items: center;
 }
 
-.header h1, a
-{
+.header h1, a {
     margin-left: 10px;
 }
 
-.header h1
-{
+.header h1 {
     margin-right: 20px;
 }
 
-.dir-link
-{
+.dir-link {
     width: 15px;
     height: 15px;
 }
 
 .tiles-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px; /* Adjust the gap between tiles as needed */
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px; /* Adjust the gap between tiles as needed */
 }
 
 .tile {
-  position: relative;
-  width: 200px; /* Adjust the tile width as needed */
+    position: relative;
+    width: 200px; /* Adjust the tile width as needed */
+    height: 300px; /* Adjust the tile width as needed */
 }
 
 .tile .bg-thumb {
-  display: block;
-  width: 100%;
-  height: auto;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
 }
 
 .overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2); /* Adjust the overlay background color and opacity as needed */
-  color: white;
-  padding: 20px;
-  box-sizing: border-box;
-  opacity: 0.3;
-  transition: opacity 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2); /* Adjust the overlay background color and opacity as needed */
+    color: white;
+    padding: 20px;
+    box-sizing: border-box;
+    opacity: 0.3;
+    transition: opacity 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .tile:hover .overlay {
-  opacity: 1;
+    opacity: 1;
 }
 
 .overlay h2, .overlay p, .overlay a {
-  margin: 0;
+    margin: 0;
 }
 
 .overlay h2 {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 .overlay p {
-  font-size: 20px;
-  margin-bottom: 10px;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
+    font-size: 20px;
+    margin-bottom: 10px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
+.overlay .a-hidden:hover
+{
+    text-decoration: none;
+}
+.overlay .a-hidden:visited
+{
+    text-decoration: none;
 }
 
 .overlay a {
-  display: inline-block;
-  margin-right: 10px;
-  color: white;
-  text-decoration: none;
+    display: inline-block;
+    margin-right: 10px;
+    color: white;
+    text-decoration: none;
 }
 
 .overlay a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
