--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -12,7 +12,7 @@
 <div class="gallery">
     {% for image in images %}
     <div class="thumbnail">
-        <a href="/study-image/{{ image.image_id }}">
+        <a href="/study-image/{{ image.image_id }}?same-folder=true&time-planned=120">
             <img src="/thumb/{{ image.image_id }}.jpg" alt="{{ image.image_id }}">
         </a>
     </div>
