--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="header">
-<h1>Folder </h1>
-    <p>[{{ overview.study_type }}]</p><p>{{ overview.path }}</p>
+<h1>{{ title }} </h1>
+    <p>[{{ overview.study_type|default('') }}]</p><p>{{ overview.path|default('') }}</p>
 </div>
 <div class="gallery">
     {% for image in images %}
