--- a/static/style_image.css
+++ b/static/style_image.css
@@ -87,8 +87,14 @@ body {
 
 .modal-img, .magnification
 {
-    cursor: url("/static/cursor-zoom.png") , auto;
+    cursor: url("/static/cursor-transp.png") , auto;
 }
+
+.cursor-stop-m2 {cursor: url("/static/cursor-solid-4.5.png") , auto !important;}
+.cursor-stop-m1 {cursor: url("/static/cursor-solid-9.png") , auto !important;}
+.cursor-stop-0 {cursor: url("/static/cursor-solid-18.png") , auto !important;}
+.cursor-stop-p1 {cursor: url("/static/cursor-solid-36.png") , auto !important;}
+.cursor-stop-p2 {cursor: url("/static/cursor-solid-72.png") , auto !important;}
 
 .modal-button-prev, .modal-button-next
 {
